// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<article
  class="Spinner"
>
  <ul
    class="SpinnerWheels SpinnerWheels--waiting"
  >
    
    <spinner-wheel-stub
      islocked="false"
      isspinning="true"
      name="color"
      value="red"
    />
    <spinner-wheel-stub
      islocked="false"
      isspinning="true"
      name="shape"
      value="round"
    />
    <spinner-wheel-stub
      islocked="false"
      isspinning="false"
      name="feeling"
      value="sad"
    />
    
  </ul>
  <button
    class="SpinnerLever"
  >
    Click to Spin!
  </button>
</article>
`;

exports[` 2`] = `
<article
  class="Spinner"
>
  <ul
    class="SpinnerWheels SpinnerWheels--waiting"
  >
    
    <spinner-wheel-stub
      islocked="false"
      isspinning="true"
      name="color"
      value="red"
    />
    <spinner-wheel-stub
      islocked="false"
      isspinning="true"
      name="shape"
      value="round"
    />
    <spinner-wheel-stub
      islocked="false"
      isspinning="false"
      name="feeling"
      value="sad"
    />
    
  </ul>
  <button
    class="SpinnerLever"
    disabled=""
  >
    Spinning...
  </button>
</article>
`;
